<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boomerang</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="device">phones</string>
    <!-- Common Error Strings -->
    <string name="no_network">No network connection</string>
    <string name="unable_fetch_data">Unable to fetch data</string>

    <!-- Server Errors String -->
    <string name="server_error">Server error</string>
    <string name="badgateway">Bad gateway error</string>
    <string name="client_timeout">Client connection timeout error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error">Error</string>
    <string name="no_res">No response</string>
    <string name="http_accep">Request accepted but not completed</string>
    <string name="http_bad_method">Http method not allowed</string>
    <string name="http_bad_request">The request had bad syntax</string>
    <string name="http_conflict">Http conflict error</string>
    <string name="http_created">Request fulfilled but different resource created</string>
    <string name="http_ent_too_large">Request entity is larger than server willing</string>
    <!-- Login Screen Strings -->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="empty_email">Please enter your email address</string>
    <string name="valied_Email">Please enter valid email address</string>
    <string name="empty_password">Please enter your password </string>

    <!-- DashBoard Screen Strings -->
    <string name="my_file">My Files</string>
    <string name="my_profile">My Profile</string>
    <string name="space_stats">Space Stats</string>
    <string name="allowed">Allowed</string>
    <string name="consumed">Consumed</string>
    <string name="remaining">Remaining</string>
    <!--Custom Gallery Strings-->
    <string name="sel">Select</string>
    <string name="load_more">Load More</string>
    <!-- MyFiles Strings -->
    <string name="myfile">My files</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="myfiles">My Files</string>
    <string name="no_file">No files inside folder</string>
    <string name="no_search_result">No search result found</string>
    <string name="empty_search">Please enter text to search</string>
    <string name="createfolder">Create Folder</string>
    <string name="enter_folder_name">Enter folder name</string>
    <string name="create">Create</string>
    <string name="empty_foldername">Please enter folder name</string>
    <string name="folder_already">Folder already existed</string>
    <string name="folder_name_length">Folder name length should be less than 80</string>
    <string name="special_ch_not_all">Special characters are not allowed</string>
    <!-- UserProfile Strings -->
    <string name="user_info">User Information</string>
    <string name="email">E-mail</string>
    <string name="company">Company</string>
    <string name="package_info">Package Information</string>
    <string name="reg_date">Registartion Date</string>
    <string name="sub_pack">Subscription Package</string>
    <string name="sub_pack_value">Buisness</string>
    <string name="sub_expdate">Subscription Expiry Date</string>
    <string name="zip_code">Zip Code</string>
    <string name="dummy_email">abc@gmail.com</string>
    <string name="dummy_password">abc12</string>
    <string name="dummy_company">No company</string>
    <string name="dummy_date">12-03-1991</string>
    <string name="dummy_zip">144221</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>

    <!--Edit Profile-->
    <string name="empty_fname">Please enter first name</string>
    <string name="empty_lname">Please enter last name</string>
    <string name="empty_current_pass">Please enter your current password</string>
    <string name="new_current_match_error">New and current password must be same</string>
    <string name="wrong_currentpass">Please enter correct current password</string>
    <string name="empty_newpass">Please enter new password</string>
    <string name="confirm_pass_error">New and confirm password should be same</string>
    <string name="new_pass_error">"New password must be different from the current password"</string>
    <!-- ListView Header -->
    <string name="back">Back</string>
    <string name="loading">Loading\u002e\u002e\u002e</string>
    <string name="title">Title</string>
    <string name="ok">Ok</string>
    <string name="message">Please enter your message</string>
    <string name="cancel">Cancel</string>

    <!-- SearchView String -->
    <string name="search_file">Search For File</string>
    <string name="search_file_folder">Search for files/folders</string>

    <!--RequesFileView Strings-->
    <string name="request_folder">Request A File</string>
    <string name="enter_email">Enter email</string>
    <string name="request">Request</string>
    <string name="enter_message">Enter message</string>
    <string name="messagee">Message</string>
    <string name="expiry">Expiry</string>
    <string name="emaill"><font fgcolor="#ff3d2924">Email address</font><font fgcolor="#ffff0000">\u002A</font></string>
    <string name="no_expiry">No expiry</string>
    <string name="exp_one_day">After 1 day</string>
    <string name="exp_seven_day">After 7 days</string>
    <string name="email_empty">Please enter email</string>

    <!--ShareFileFolderView Strings-->
    <string name="share_file_folder">Share File\u002FFolder</string>
    <string name="enter_emails">Enter email\u002C\u0020\u0020use comma for multiple email</string>
    <string name="share">Share</string>
    <string-array name="expiry_value_array">
        <item>@string/no_expiry</item>
        <item>@string/exp_one_day</item>
        <item>@string/exp_seven_day</item>
    </string-array>

    <!-- Upload File String -->
    <string name="choose_option">Choose option</string>
    <string name="upload_error_message">Please select atmost 5 items.</string>
    <string name="video_record">Record Video</string>
    <string name="task_error">cannot perform this task</string>
    <string name="delete_note">Note: Swipe from right or left to delete</string>
    <string name="space_error">Not have enough space to upload files</string>
    <!-- Upload Files PopUp Strings -->
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="title_activity_custom_gallery">CustomGalleryActivity</string>

    <!--Custom Gallery ACtivity Strings-->
    <string name="done">Done</string>
    <string name="choose_multipleaction">CHOOSE_MULTIPLE</string>
    <string name="no_image_avail">No image availble</string>
    <string name="no_video_avail">No video availble</string>
    <string name="select_file">Please select atleast one file</string>
    <string name="file_max_limit">Only 5 items can be selected at times</string>
    <string name="mime_type_error">Mime type of file is null</string>
    <string name="select">Select</string>

    <!--SearchResult Screen Strings-->
    <string name="no_result">No files found</string>
    <string name="search_result">Search Result</string>
    <string name="nofilefolder">No file/folder found</string>
    <string name="delete_failed">Deeletion failed</string>
    <!--ConfirmDialog Strings-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_file_message">Are you sure you want to delete this file?</string>
    <string name="delete_folder_message">Are you sure you want to delete this folder?</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <!--Edit Profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fname_hint">First name</string>
    <string name="lname_hint">Last name</string>

    <!--Forgot Password-->
    <string name="forgot_heading"><font fgcolor="#ffffffff"><b>Forgot Your Password? </b>No Worry!Generate a new one</font></string>
    <string name="submit">Submit</string>
    <!--Settings String-->
    <string name="settings">Settings</string>
    <string name="phone_storage">Phone storage</string>
    <string name="sd_card">Sd card</string>
    <string name="internal_storage_insuff">Internal storage is insufficient</string>
    <string name="sdcard_storage_insuff">Sd card storage is insufficient</string>
    <string name="mem_set">Memory settings</string>
    <string name="auto_sync">Auto sync</string>
    <string name="time_interval">Time interval</string>
    <string name="save">Save</string>
    <string name="settings_save">Settings save successfully</string>
    <string name="ten_minute">10 Min</string>
    <string name="twenty_minute">20 Min</string>
    <string name="thirty_minute">30 Min</string>
    <string name="fourty_minute">40 Min</string>
    <string name="fifty_minute">50 Min</string>
    <string name="onehour">60 Min</string>
    <string-array name="time_interval">
    <item>@string/ten_minute</item>
    <item>@string/twenty_minute</item>
    <item>@string/thirty_minute</item>
    <item>@string/fourty_minute</item>
    <item>@string/fifty_minute</item>
    <item>@string/onehour</item>
    </string-array>
    <!--General Strings-->
    <string name="download_cmp">Download completed successfully in MyBoomerangBackup</string>
    <string name="downloading">Downloading\u002e\u002e\u002e</string>
    <string name="download_start">Downloading started</string>
    <string name="download_failed">Download failed</string>
    <string name="sync_start">Sync started</string>
    <string name="boomerang_not">Boomerang notification</string>
</resources>
