<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">
    <TextView
        android:id="@+id/tv_share_file_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_file_folder"
        android:textColor="@color/search_for_file"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/emails"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_edittext_bg"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/enter_emails"
        android:inputType="textEmailAddress|textMultiLine"
        android:padding="10dp"
        android:textColor="@color/search_box_txtclr"
        android:textColorHint="@color/search_box_txtclr"
        android:textCursorDrawable="@drawable/edittext_cursor_drawable"
        />
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/messagee"
        android:textColor="@color/login_button_bg"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/enter_message"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/search_box_txtclr"
        android:textColorHint="@color/search_box_txtclr"
        android:textCursorDrawable="@drawable/edittext_cursor_drawable"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="1"
        >
        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/search_button_bg"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="@color/email_password_txtclr"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/cancel_button_bg"
            android:text="@string/cancel"
            android:textColor="@color/email_password_txtclr"
            />
    </LinearLayout>
</LinearLayout>
    </ScrollView>