<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/serachview_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_search_for_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/search_file"
        android:textColor="@color/search_for_file"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/search_file_folder"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/search_box_txtclr"
        android:textColorHint="@color/search_box_txtclr"
        android:textCursorDrawable="@drawable/edittext_cursor_drawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/search_button_bg"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/email_password_txtclr" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/cancel_button_bg"
            android:text="@string/cancel"
            android:textColor="@color/email_password_txtclr" />
    </LinearLayout>
</LinearLayout>