<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:background="@color/remaining_indi_color"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="10dp"
    android:background="@color/login_box_bg"
    android:orientation="horizontal"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appicon"
        />
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:text="@string/title"
         android:textSize="20sp"
         android:textColor="@color/all_indi_color"
         />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/all_indi_color"
        android:text="@string/message"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:gravity="center"
            android:textColor="@color/all_indi_color"
            android:background="@drawable/button_bg"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/all_indi_color"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bg"
            />
        </LinearLayout>
</LinearLayout>